--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "snowio/akeneo-bundle-ee",
+    "name": "snowio/akeneo2-snow-bundle-ee",
     "license": "MIT",
     "authors": [
         {
