--- a/Resources/config/jobs.yml
+++ b/Resources/config/jobs.yml
@@ -11,7 +11,7 @@ services:
             - '@akeneo_batch.job_repository'
             -
                 - '@snowio_connector.step.csv_published_product.export'
-                - '@snowio_connector.step.csv_variant_group.export'
+                - '@snowio_connector.step.csv_product_model.export'
                 - '@snowio_connector.step.csv_category.export'
                 - '@snowio_connector.step.csv_attribute.export'
                 - '@snowio_connector.step.csv_attribute_option.export'
