--- a/Resources/config/form_extensions/snowio_published_product_export_edit.yml
+++ b/Resources/config/form_extensions/snowio_published_product_export_edit.yml
@@ -2,6 +2,28 @@ extensions:
     snowio-csv-published-product-export-edit:
         module: pim/form/common/edit-form
 
+    snowio-csv-published-product-export-edit-main-image:
+        module: pim/form/common/main-image
+        parent: snowio-csv-published-product-export-edit
+        targetZone: main-image
+        config:
+            path: bundles/pimui/images/illustration-export-csv.svg
+
+    snowio-csv-published-product-export-edit-user-navigation:
+        module: pim/menu/user-navigation
+        parent: snowio-csv-published-product-export-edit
+        targetZone: user-menu
+        config:
+            userAccount: pim_menu.user.user_account
+            logout: pim_menu.user.logout
+
+    snowio-csv-published-product-export-edit-breadcrumbs:
+        module: pim/common/breadcrumbs
+        parent: snowio-csv-published-product-export-edit
+        targetZone: breadcrumbs
+        config:
+            tab: pim-menu-exports
+
     snowio-csv-published-product-export-edit-cache-invalidator:
         module: pim/cache-invalidator
         parent: snowio-csv-published-product-export-edit
@@ -21,34 +43,38 @@ extensions:
         position: 100
         config:
             tabTitle: pim_enrich.form.job_instance.tab.properties.title
-            tabCode: pim-job-instance-properties
+            tabCode: snowio-properties
+
+    snowio-csv-published-product-export-edit-global:
+        module: pim/job/common/edit/properties
+        parent: snowio-csv-published-product-export-edit-tabs
+        aclResourceId: pim_importexport_export_profile_property_edit
+        targetZone: container
+        position: 120
+        config:
+            tabTitle: pim_enrich.export.product.global_settings.title
+            tabCode: snowio-global
 
     snowio-csv-published-product-export-edit-content:
         module: pim/job/product/edit/content
         parent: snowio-csv-published-product-export-edit-tabs
         aclResourceId: pim_importexport_export_profile_content_edit
         targetZone: container
-        position: 110
+        position: 130
         config:
             tabTitle: pim_enrich.form.job_instance.tab.content.title
-            tabCode: pim-job-instance-content
-
-    snowio-csv-published-product-export-edit-content-structure:
-        module: pim/job/product/edit/content/structure
-        parent: snowio-csv-published-product-export-edit-content
-        targetZone: structure-filters
-        position: 100
+            tabCode: snowio-content
 
     snowio-csv-published-product-export-edit-history:
         module: pim/common/tab/history
         parent: snowio-csv-published-product-export-edit-tabs
         targetZone: container
         aclResourceId: pim_importexport_export_profile_history
-        position: 120
+        position: 140
         config:
             class: Akeneo\Component\Batch\Model\JobInstance
             title: pim_enrich.form.job_instance.tab.history.title
-            tabCode: pim-job-instance-history
+            tabCode: snowio-history
 
     snowio-csv-published-product-export-edit-properties-code:
         module: pim/job/common/edit/field/text
@@ -70,11 +96,22 @@ extensions:
             label: pim_enrich.form.job_instance.tab.properties.label.title
             readOnly: false
 
+    snowio-csv-published-product-export-edit-properties-file-path:
+        module: pim/job/common/edit/field/text
+        parent: snowio-csv-published-product-export-edit-global
+        position: 120
+        targetZone: properties
+        config:
+            fieldCode: configuration.filePath
+            readOnly: false
+            label: pim_enrich.form.job_instance.tab.properties.file_path.title
+            tooltip: pim_enrich.form.job_instance.tab.properties.file_path.help
+
     snowio-csv-published-product-export-edit-properties-decimal-separator:
         module: pim/job/common/edit/field/decimal-separator
-        parent: snowio-csv-published-product-export-edit-properties
-        position: 120
-        targetZone: global-settings
+        parent: snowio-csv-published-product-export-edit-global
+        position: 130
+        targetZone: properties
         config:
             fieldCode: configuration.decimalSeparator
             readOnly: false
@@ -83,9 +120,9 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-date-format:
         module: pim/job/product/edit/field/date-format
-        parent: snowio-csv-published-product-export-edit-properties
-        position: 130
-        targetZone: global-settings
+        parent: snowio-csv-published-product-export-edit-global
+        position: 140
+        targetZone: properties
         config:
             fieldCode: configuration.dateFormat
             readOnly: false
@@ -94,9 +131,9 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-delimiter:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
-        position: 140
-        targetZone: global-settings
+        parent: snowio-csv-published-product-export-edit-global
+        position: 150
+        targetZone: properties
         config:
             fieldCode: configuration.delimiter
             readOnly: false
@@ -105,9 +142,9 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-enclosure:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
-        position: 150
-        targetZone: global-settings
+        parent: snowio-csv-published-product-export-edit-global
+        position: 160
+        targetZone: properties
         config:
             fieldCode: configuration.enclosure
             readOnly: false
@@ -116,9 +153,9 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-with-header:
         module: pim/job/common/edit/field/switch
-        parent: snowio-csv-published-product-export-edit-properties
-        position: 160
-        targetZone: global-settings
+        parent: snowio-csv-published-product-export-edit-global
+        position: 170
+        targetZone: properties
         config:
             fieldCode: configuration.withHeader
             readOnly: false
@@ -127,9 +164,9 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-with-media:
         module: pim/job/common/edit/field/switch
-        parent: snowio-csv-published-product-export-edit-properties
-        position: 170
-        targetZone: global-settings
+        parent: snowio-csv-published-product-export-edit-global
+        position: 180
+        targetZone: properties
         config:
             fieldCode: configuration.with_media
             readOnly: false
@@ -137,21 +174,21 @@ extensions:
             tooltip: pim_enrich.form.job_instance.tab.properties.with_media.help
 
     snowio-csv-published-product-export-edit-properties-endpoint:
-        module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
-        position: 180
-        targetZone: global-settings
-        config:
-            fieldCode: configuration.endpoint
-            readOnly: false
-            label: snowio_connector.form.job_instance.tab.properties.endpoint.title
-            tooltip: snowio_connector.form.job_instance.tab.properties.endpoint.help
+            module: pim/job/common/edit/field/text
+            parent: snowio-csv-published-product-export-edit-global
+            position: 180
+            targetZone: properties
+            config:
+                fieldCode: configuration.endpoint
+                readOnly: false
+                label: snowio_connector.form.job_instance.tab.properties.endpoint.title
+                tooltip: snowio_connector.form.job_instance.tab.properties.endpoint.help
 
     snowio-csv-published-product-export-edit-properties-application-id:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
+        parent: snowio-csv-published-product-export-edit-global
         position: 190
-        targetZone: global-settings
+        targetZone: properties
         config:
             fieldCode: configuration.applicationId
             readOnly: false
@@ -160,9 +197,9 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-secret-key:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
+        parent: snowio-csv-published-product-export-edit-global
         position: 200
-        targetZone: global-settings
+        targetZone: properties
         config:
             fieldCode: configuration.secretKey
             readOnly: false
@@ -171,20 +208,20 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-export-dir:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
+        parent: snowio-csv-published-product-export-edit-global
         position: 210
-        targetZone: global-settings
+        targetZone: properties
         config:
             fieldCode: configuration.exportDir
             readOnly: false
             label: snowio_connector.form.job_instance.tab.properties.export_dir.title
             tooltip: snowio_connector.form.job_instance.tab.properties.export_dir.help
 
-    snowio-csv-published -product-export-edit-properties-rsync-directory:
+    snowio-csv-published-product-export-edit-properties-rsync-directory:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
+        parent: snowio-csv-published-product-export-edit-global
         position: 220
-        targetZone: global-settings
+        targetZone: properties
         config:
             fieldCode: configuration.rsyncDirectory
             readOnly: false
@@ -193,9 +230,9 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-rsync-user:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
+        parent: snowio-csv-published-product-export-edit-global
         position: 230
-        targetZone: global-settings
+        targetZone: properties
         config:
             fieldCode: configuration.rsyncUser
             readOnly: false
@@ -204,9 +241,9 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-rsync-host:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
+        parent: snowio-csv-published-product-export-edit-global
         position: 240
-        targetZone: global-settings
+        targetZone: properties
         config:
             fieldCode: configuration.rsyncHost
             readOnly: false
@@ -215,14 +252,20 @@ extensions:
 
     snowio-csv-published-product-export-edit-properties-rsync-options:
         module: pim/job/common/edit/field/text
-        parent: snowio-csv-published-product-export-edit-properties
-        position: 250
-        targetZone: global-settings
+        parent: snowio-csv-published-product-export-edit-global
+        position: 240
+        targetZone: properties
         config:
             fieldCode: configuration.rsyncOptions
             readOnly: false
             label: snowio_connector.form.job_instance.tab.properties.rsync_options.title
             tooltip: snowio_connector.form.job_instance.tab.properties.rsync_options.help
+
+    snowio-csv-published-product-export-edit-content-structure:
+        module: pim/job/product/edit/content/structure
+        parent: snowio-csv-published-product-export-edit-content
+        targetZone: structure-filters
+        position: 100
 
     snowio-csv-published-product-export-edit-label:
         module: pim/job/common/edit/label
@@ -236,15 +279,22 @@ extensions:
         targetZone: meta
         position: 100
 
-    snowio-csv-published-product-export-edit-delete:
-        module: pim/job/export/edit/delete
+    snowio-csv-published-product-export-edit-secondary-actions:
+        module: pim/form/common/secondary-actions
         parent: snowio-csv-published-product-export-edit
         targetZone: buttons
+        position: 50
+
+    snowio-csv-published-product-export-edit-delete:
+        module: pim/job/export/edit/delete
+        parent: snowio-csv-published-product-export-edit-secondary-actions
+        targetZone: secondary-actions
         aclResourceId: pim_importexport_export_profile_remove
         position: 100
         config:
             trans:
-                title: confirmation.remove.job_instance
+                title: confirmation.remove.export_profile
+                subTitle: pim_menu.item.export_profile
                 content: pim_enrich.confirmation.delete_item
                 success: flash.job_instance.removed
                 failed: error.removing.job_instance
@@ -317,6 +367,10 @@ extensions:
         parent: snowio-csv-published-product-export-edit-content-data
         config:
             types: [pim_catalog_identifier]
+
+    snowio-csv-published-product-export-edit-content-data-help:
+        module: pim/job/common/edit/content/data/help
+        parent: snowio-csv-published-product-export-edit-content-data
 
     snowio-csv-published-product-export-edit-validation:
         module: pim/job/common/edit/validation
