--- a/Resources/config/jobs.yml
+++ b/Resources/config/jobs.yml
@@ -16,6 +16,7 @@ services:
                 - '@snowio_connector.step.csv_attribute.export'
                 - '@snowio_connector.step.csv_attribute_option.export'
                 - '@snowio_connector.step.csv_family.export'
+                - '@snowio_connector.step.csv_family_variant.export'
                 - '@snowio_connector.step.csv_attribute_group.export'
                 - '@snowio_connector.step.metadata'
                 - '@snowio_connector.step.media_export'
